--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@
         <ul>
             <a href="#roadmap">roadmap</a>
         </ul>
-
-    
-
     </div>
 </head>
     <body>
 <div id="home">
-    <button class="fa_buy" onclick="window.open('https://pancakeswap.finance/swap?outputCurrency=0x0B5F072f290670121B8109eE3A98e489D5593490');">Buy On Pancake</button>
-    <button class="fa_join" onclick="window.open('https://t.me/alieninucommunity');">Join Telegram</button>
+    <button class="fa_join" onclick="window.open('https://t.me/alieninuerc');">Join Telegram</button>
     <h1>Alien Inu</h1>
-    <p>Alien Inu is a new meme cryptocurrency token that will be launched on the Binance Smart Chain (BSC). The first Alien token that will land to the MOON 🔥<br><br>Contract Adress : 0x0b5f072f290670121b8109ee3a98e489d5593490</p>
-    
+    <p>Alien Inu is a new meme cryptocurrency token that will be launched on Etherum (ERC). The first Alien token that will land to the MOON 🔥<br><br>Contract Adress : 0x0b5f072f290670121b8109ee3a98e489d5593490</p>
     <div class="logo"></div>
 </div>
 <div id="about_token">
@@ -60,10 +55,8 @@
     <ul>
       <li>Total Supply: 1,000,000,000</li>
       <li>Token Name : Alien Inu</li>
-      <li>Symbol : <b>$AlienInu</b></li>
-      <li>Tax: 8% (BUY/SELL)</li>
-      <li>Marketing : 6%</li>
-      <li style="margin-bottom: 100px;">Liquidity: 2%</li>
+      <li>Symbol : <b>$AINU</b></li>
+      <li style="margin-bottom: 100px;">Tax: 5% (BUY/SELL)</li>
     </ul> <div id="roadmap">
         <h2>roadmap</h2>
         <div class="roadmap-container">
