--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="home">
     <button class="fa_join" onclick="window.open('https://t.me/alieninuerc');">Join Telegram</button>
     <h1>Alien Inu</h1>
-    <p>Alien Inu is a new meme cryptocurrency token that will be launched on Etherum (ERC). The first Alien token that will land to the MOON 🔥<br><br>Contract Adress : <b>Soon</b></p>
+    <p>Alien Inu is a new meme cryptocurrency token that will be launched on Ethereum (ERC). The first Alien token that will land to the MOON 🔥<br><br>Contract Adress : <b>Soon</b></p>
     <div class="logo"></div>
 </div>
 <div id="about_token">
